--- a/client/src/components/styles/formStyles/uploadForm.module.scss
+++ b/client/src/components/styles/formStyles/uploadForm.module.scss
@@ -1,5 +1,5 @@
 .uploadForm{
-    width: 70%;
+    width: 100%;
     padding-left: 2rem;
     padding-right: 2rem;
     display: flex;
@@ -44,8 +44,8 @@
 .uploadContainer{
     width: 100%;
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
   
 }
