--- a/client/src/pages/styles/profile.module.scss
+++ b/client/src/pages/styles/profile.module.scss
@@ -2,6 +2,9 @@
     padding-top: 5rem;
     padding-bottom: 5rem;
 }
+.imgColumn{
+    justify-content: center;
+}
 .images{
     display: flex;
     flex-direction: row;
@@ -12,7 +15,7 @@
 }
 
 .uploadSection{
-    width: 90%;
+    width: 95%;
     align-items: center;
 }
 
@@ -24,4 +27,10 @@
 .hLine{
     background-color: rgb(187, 61, 61);
     width: 95%;
+}
+.toggleBtn{
+   border-radius: 50% !important;
+   background-color: rgb(201, 100, 100) !important;
+   color: white !important;
+
 }
