Recently active users are loaded on the home page next step is to create a view detailed account for each user where the users will be able to make connections and send messages

--- a/client/src/pages/styles/home.module.scss
+++ b/client/src/pages/styles/home.module.scss
@@ -7,3 +7,9 @@ header[role="banner"] {
       margin: 20px auto;
     }
   }
+.activeUsersTitle{
+  width: 100%;
+  padding: 1rem;
+  background-color: rgb(240, 116, 135);
+  color: rgb(78, 0, 12)
+}
