--- a/client/src/components/styles/UI/index.module.scss
+++ b/client/src/components/styles/UI/index.module.scss
@@ -1,3 +1,4 @@
+// UserImgList Classes
 .userImgRow{
     display: flex;
     flex-direction: row;
@@ -29,4 +30,36 @@
     background-color: rgb(240, 116, 135);
     color: rgb(78, 0, 12);
     width: 100%;
+}
+
+//imgRow classes
+
+.imageRow{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    overflow-x: auto;
+    padding: 3rem;
+    width: 100%;
+    background-color: #f1f1f1;
+}
+
+.image{
+    width: 25%;
+    height: auto;
+    max-height: 30rem;
+}
+//Title styles
+
+.title {
+    width: 100%;
+    padding: 5px;
+    font-size: 42px;
+    letter-spacing: 2px;
+    font-weight: 500;
+    background-color: rgb(253, 124, 124);
+    color: darkred;
+    text-align: center;
 }
