--- a/client/src/components/styles/UI/index.module.scss
+++ b/client/src/components/styles/UI/index.module.scss
@@ -59,7 +59,7 @@
     font-size: 42px;
     letter-spacing: 2px;
     font-weight: 500;
-    background-color: rgb(253, 124, 124);
+    border-bottom:1px solid rgb(253, 124, 124);
     color: darkred;
-    text-align: center;
+   
 }
