--- a/client/src/components/styles/compIndex.module.scss
+++ b/client/src/components/styles/compIndex.module.scss
@@ -79,3 +79,64 @@
     object-fit: cover;
     border: 2px solid rgb(243, 76, 76);
 }
+.connectImgDiv{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+// Chat display list
+
+.chatDisplayRow{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 3em;
+}
+.chatDisplayCol{
+    display:flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    background-color: linen;
+    height: 40em;
+}
+.chatDisplayImg{
+    height: 5rem;
+    width: 7rem;
+    object-fit: cover;
+    margin: 1rem;
+}
+.userAmsg{
+    font-size: 24px;
+    color: #14146d;
+    width: 100%;
+    text-align: left;
+}
+.userBmsg{
+    font-size: 24px;
+    color: #a00000;
+    width: 100%;
+    text-align: right;
+}
+.chatUserImages{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+//ChatInput
+
+.chatInput{
+    height: 3rem;
+    width: 90%;
+    font-size: 20px;
+}
+.chatFormRow{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 1.8em;
+    background-color: rgb(224, 125, 125);
+}
