fixing small bugs in the client

--- a/client/src/components/styles/compIndex.module.scss
+++ b/client/src/components/styles/compIndex.module.scss
@@ -101,6 +101,7 @@
     align-items: flex-start;
     background-color: linen;
     height: 40em;
+    overflow-y: scroll;
 }
 .chatDisplayImg{
     height: 5rem;
