--- a/client/src/components/styles/UI/index.module.scss
+++ b/client/src/components/styles/UI/index.module.scss
@@ -6,10 +6,9 @@
 }
 .userCol{
     cursor: pointer;
-    object-fit: cover;
+    
     overflow: hidden;
     background-color: snow;
-    border: 1px solid rgb(187, 61, 61);
     display:flex;
     flex-direction: column;
     justify-content: space-between;
@@ -19,12 +18,12 @@
 }
 .userCol:hover{
    opacity: 0.8;
-   box-shadow: 1px 1px 2px 3px #cdcdcd;
+   box-shadow: 1px 1px 12px 1px lightcoral;
 }
 .userImg{
-    width: auto;
+    width: 100%;
     height: 18rem;
-   
+    object-fit: cover;
 }
 .userNick{
     background-color: rgb(240, 116, 135);
