Completed messaging support between users, small UI fixes. getting the app ready to implement notifications for the user and other features

--- a/client/src/components/styles/formStyles/formtwo.module.scss
+++ b/client/src/components/styles/formStyles/formtwo.module.scss
@@ -5,7 +5,7 @@
 }
 .imgCol{
     height: 80vh;
-    background-image: url('../../images/joinus.jpeg');
+    background-image: url('../../../images/joinus.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
