--- a/client/src/components/styles/formStyles/formone.module.scss
+++ b/client/src/components/styles/formStyles/formone.module.scss
@@ -1,4 +1,16 @@
+// .startContainer{
+//     min-height: 100vh;
+//     background: rgb(56,23,23);
+//     background: linear-gradient(151deg, rgba(56,23,23,1) 0%, rgba(188,78,78,1) 100%);
 
+// }
+// .titleBox{
+//     height: 10vh;
+//     background-color:rgba(56,23,23,1);
+//     color: rgb(255, 173, 173);
+//     font-size: 52px;
+//     padding-left: 2rem;
+// }
 .mainRow{
     background-color:rgba(56,23,23,0.2);
     padding: 2rem;
@@ -6,7 +18,7 @@
 }
 .imgCol{
     height: 80vh;
-    background-image: url('../../images/joinus.jpeg');
+    background-image: url('../../../images/joinus.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -16,6 +28,7 @@
     color: whitesmoke;
 }
 .accountForm{
+    width: 70%;
     padding-left: 2rem;
     padding-right: 2rem;
 }
