--- a/client/src/pages/styles/authentication.module.scss
+++ b/client/src/pages/styles/authentication.module.scss
@@ -3,8 +3,6 @@
     background-color: silver;
 }
 .authImage{
-    height: 100vh;
-    width: 100%;
     background-image: url('../../images/date.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
@@ -16,7 +14,7 @@
 }
 .formColumn{
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     padding: 5rem 5rem 0 0;
     background: rgb(56,23,23);
     background: linear-gradient(151deg, rgba(56,23,23,1) 0%, rgba(188,78,78,1) 100%);
