--- a/client/src/components/styles/UI/index.module.scss
+++ b/client/src/components/styles/UI/index.module.scss
@@ -2,33 +2,36 @@
 .userImgRow{
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
 .userCol{
     cursor: pointer;
-    
     overflow: hidden;
-    background-color: snow;
     display:flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    color: rgb(78, 0, 12);
-    font-weight: 500;
+    color: darkslategrey;
+    font-weight: 300;
+    box-shadow: 1px 1px 3px 3px lightgray;
+
+    h3 {
+        color: #fd7c7c;
+        font-weight: 500;
+        background: darkslategrey;
+        text-transform: uppercase;
+        text-align: center;
+        width: 100%;
+    }
 }
 .userCol:hover{
-   opacity: 0.8;
-   box-shadow: 1px 1px 12px 1px lightcoral;
+   opacity: 0.9;
 }
 .userImg{
     width: 100%;
     height: 18rem;
     object-fit: cover;
-}
-.userNick{
-    background-color: rgb(240, 116, 135);
-    color: rgb(78, 0, 12);
-    width: 100%;
 }
 
 //imgRow classes
@@ -37,12 +40,13 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
     overflow-x: auto;
     padding: 3rem;
     width: 100%;
-    background-color: #f1f1f1;
+    background-color: #faf6f6;
+    min-height: 45em;
 }
 
 .image{
@@ -58,7 +62,8 @@
     font-size: 42px;
     letter-spacing: 2px;
     font-weight: 500;
-    border-bottom:1px solid rgb(253, 124, 124);
-    color: darkred;
+    text-transform: uppercase;
+    color: #bb3d3d;
+    text-align: center;
    
 }
