--- a/client/src/pages/styles/profile.module.scss
+++ b/client/src/pages/styles/profile.module.scss
@@ -19,18 +19,9 @@
     align-items: center;
 }
 
-.formTitle{
-    color: rgb(187, 61, 61);
-    font-size: 42px;
-    font-weight: 100;
-}
-.hLine{
-    background-color: rgb(187, 61, 61);
-    width: 95%;
-}
 .toggleBtn{
    border-radius: 50% !important;
-   background-color: rgb(201, 100, 100) !important;
+   background-color: #c96464 !important;
    color: white !important;
 
 }
