--- a/client/src/components/styles/compIndex.module.scss
+++ b/client/src/components/styles/compIndex.module.scss
@@ -92,16 +92,16 @@
     display:flex;
     flex-direction: row;
     justify-content: center;
-    padding: 3em;
 }
 .chatDisplayCol{
     display:flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    background-color: linen;
+    background-color: whitesmoke;
     height: 40em;
     overflow-y: scroll;
+    border-radius: 10px;
 }
 .chatDisplayImg{
     height: 5rem;
@@ -130,14 +130,35 @@
 //ChatInput
 
 .chatInput{
-    height: 3rem;
-    width: 90%;
-    font-size: 20px;
+    width: 100%!important;
+    font-size: 20px!important;
 }
 .chatFormRow{
     display:flex;
     flex-direction: row;
     justify-content: center;
-    padding: 1.8em;
-    background-color: rgb(224, 125, 125);
+    align-items: center;
+    margin-bottom: 2rem;
+
+}
+.chatFormCol{
+    width: 100%;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background:darkslategray;
+    padding: 1em;
+    border-radius: 10%;
+}
+.inputGroup{
+    width: 100%;
+}
+.chatForm{
+    width:100%;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 5em;
 }
