--- a/client/src/components/styles/UI/index.module.scss
+++ b/client/src/components/styles/UI/index.module.scss
@@ -4,6 +4,7 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: flex-start;
+    background: #f1f1f1;
 }
 .userCol{
     cursor: pointer;
@@ -14,12 +15,13 @@
     align-items: center;
     color: darkslategray;
     font-weight: 300;
-    box-shadow: 1px 1px 3px 3px lightgray;
+    background: whitesmoke;
+    border-left: 1px solid transparent;
+    border-right: 1px solid transparent;
 
     h3 {
         color: #fd7c7c;
-        font-weight: 500;
-        background: darkslategrey;
+        font-weight: 300;
         text-transform: uppercase;
         text-align: center;
         width: 100%;
@@ -27,6 +29,8 @@
 }
 .userCol:hover{
    opacity: 0.9;
+   border-left: 1px solid #fd7c7c;
+   border-right: 1px solid #fd7c7c;
 }
 .userImg{
     width: 100%;
@@ -46,27 +50,35 @@
     padding: 3rem;
     width: 100%;
     background-color: #faf6f6;
-    min-height: 45em;
+    min-height: 48em;
 }
 
 .imageItem{
     width: 29%;
-    height: auto;
-    padding: 4px;
-    background: darkslategray;
+    min-width:15rem;
+    height: 20rem;
     margin-left: 10px;
     margin-right: 10px;
 }
+.imageContainer {
+    width:100%;
+    height: 90%;
+}
 .image {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
 }
 .imgText{
-    height: 4rem;
+    height: 10%;
     width: 100%;
-    color: white;
-    padding: 0.3rem;
+    color: black;
+    padding: 1%;
+    overflow-y: auto;
+    background-color: #c5b9b9;
     p {
-        font-size: 22px;
+        font-size: 18px;
         font-style: italic;
     }
 }
