--- a/client/src/components/styles/compIndex.module.scss
+++ b/client/src/components/styles/compIndex.module.scss
@@ -21,9 +21,7 @@
 
 }
 .invitationImgBox:hover{
-    background-color: rgb(252, 240, 240);
-  
-    
+    opacity: 0.8;   
 }
 .invitationImg{
     width: 7rem; 
@@ -41,27 +39,31 @@
 .invitationAccept{
     height: 1.5rem;
     width: 50%;
-    background-color: rgb(109, 182, 127);
-    color: snow;
+    background-color: snow;
+    color: rgb(109, 182, 127);
     text-align: center;
     cursor: pointer;
 }
 .invitationAccept:hover{
-    opacity: 0.7;
+    opacity: 0.8;
 }
 
 .invitationDecline{
     height: 1.5rem;
     width: 50%;
-    background-color: rgb(182, 109, 109);
-    color: white;
+    background-color: snow;
+    color: rgb(243, 76, 76);
     text-align: center;
     cursor: pointer;
 }
 .invitationDecline:hover{
-    opacity: 0.7;
+    opacity: 0.8;
 }
-
+.placeholderIcon{
+    width: 7rem;
+    height: 7rem;
+    margin-right: 2rem;
+}
 
 // connectionList
 
@@ -92,22 +94,29 @@
     display:flex;
     flex-direction: row;
     justify-content: center;
+    
 }
 .chatDisplayCol{
     display:flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    background-color: whitesmoke;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
     height: 40em;
-    overflow-y: scroll;
-    border-radius: 10px;
+    background: #dbdbdb;
 }
 .chatDisplayImg{
-    height: 5rem;
+    height: 7rem;
     width: 7rem;
     object-fit: cover;
-    margin: 1rem;
+   
+}
+.chatBox {
+    overflow-y: auto;
+    width: 100%;
+    height: 90%;
+    background-color: #f1f1f1;
 }
 .userAmsg{
     font-size: 24px;
@@ -147,7 +156,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background:darkslategray;
+    background: darkslategray;
     padding: 1em;
     border-radius: 10%;
 }
