--- a/client/src/components/styles/image.module.scss
+++ b/client/src/components/styles/image.module.scss
@@ -1,9 +1,9 @@
 .imageCard {
-    width: 18rem;
+    width: 28%;
     height: 23rem;
     margin: 0.5rem;
+    background:white !important;
 }
-
 .cardImg{
     width: 100%;
     height: 60%;
