--- a/client/src/pages/styles/index.module.scss
+++ b/client/src/pages/styles/index.module.scss
@@ -117,7 +117,7 @@
     justify-content: flex-end;
     align-items: flex-start;
     width: 100%;
-    background: #fff0f0;
+    background: #fff6f6;
     min-height: 40rem;
 }
 
@@ -130,6 +130,8 @@
 
 .toggleBtn{
     width: 100%;
+    padding: 10px;
+    border-top: 1px double silver;
     button{
         border-radius: 50% !important;
         background: rgb(56,23,23);
