--- a/client/src/components/styles/UI/index.module.scss
+++ b/client/src/components/styles/UI/index.module.scss
@@ -4,7 +4,8 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: flex-start;
-    background: #f1f1f1;
+    background: #fff0f0;
+   
 }
 .userCol{
     cursor: pointer;
@@ -15,26 +16,33 @@
     align-items: center;
     color: darkslategray;
     font-weight: 300;
-    background: whitesmoke;
-    border-left: 1px solid transparent;
-    border-right: 1px solid transparent;
+    background: #faf6f6;
+    box-shadow: 1px 1px 2px 4px #faf6f6;
+    padding-top: 10px;
+    border-radius: 20px;
+    overflow: hidden;
 
     h3 {
-        color: #fd7c7c;
+        color: darkslategray;
         font-weight: 300;
-        text-transform: uppercase;
         text-align: center;
         width: 100%;
     }
+    h4 {
+        color: rgb(151, 18, 18);
+        font-style: italic;
+    }
 }
 .userCol:hover{
-   opacity: 0.9;
-   border-left: 1px solid #fd7c7c;
-   border-right: 1px solid #fd7c7c;
+   opacity: 0.8;
+   background: white;
+   box-shadow: 1px 1px 2px 4px #faf6f6;
+  
 }
 .userImg{
     width: 100%;
     height: 18rem;
+    border-radius: 20px;
     object-fit: cover;
 }
 
