--- a/client/src/components/styles/core/compIndex.module.scss
+++ b/client/src/components/styles/core/compIndex.module.scss
@@ -1,16 +1,20 @@
 //Template
 .main {
     background: #fff0f0;
-    margin: 0;
    }
-   header[role="banner"] {
-     width: 100%;
-      background-color:  rgba(163, 36, 36, 0.5);
-       #logoMain {
-         display: block;
-         margin: 0px auto;
-       }
-     }
+header[role="banner"] {
+  width: 100%;
+   background-color:  rgba(163, 36, 36, 0.5);
+    #logoMain {
+      display: block;
+      margin: 0px auto;
+    }
+}
+.footer {
+    width: 100%;
+    min-height: 10em;
+    background-color:  rgba(163, 36, 36, 0.5);
+}
 
 // Invitations component
 .invitationContainer{
@@ -196,10 +200,10 @@
     p {
         opacity: 1;
         min-height: 22px;
-        font-size:18px;
-        font-weight: 300;
-        color: darkslategrey;
-        background: rgba(163, 36, 36, 0.5);
+        font-size:20px;
+        font-weight: 700;
+        color: #460c0c;
+        
         width: 100%;
     }
     button {
@@ -242,6 +246,8 @@
     width: 100%;
     height: 22px;
     margin-bottom: 6px;
+    font-weight: 600;
+    text-align: start;
     color:darkcyan;
 }
 .iconCommentSuccess{
@@ -257,5 +263,6 @@
     height: 22px;
     margin-bottom: 6px;
     font-weight: 600;
+    text-align: end;
     color: rgb(148, 34, 34);
 }
