added the loading spinner and other error handlers as well as UX features

--- a/client/src/components/styles/formStyles/editaccount.module.scss
+++ b/client/src/components/styles/formStyles/editaccount.module.scss
@@ -115,7 +115,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: rgba(188,78,78,1);
+    background: #bc4e4e;
     padding: 0.5rem;
    
   
