--- a/client/src/pages/styles/index.module.scss
+++ b/client/src/pages/styles/index.module.scss
@@ -133,6 +133,8 @@
     width: 100%;
     padding: 10px;
     button{
+        width: 60px;
+        height: 60px;
         border-radius: 50% !important;
         background: rgb(56,23,23);
         background: linear-gradient(151deg, rgba(56,23,23,1) 0%, rgba(188,78,78,1) 100%);
