--- a/client/src/components/styles/UI/index.module.scss
+++ b/client/src/components/styles/UI/index.module.scss
@@ -70,7 +70,7 @@
 }
 .imageContainer {
     width:100%;
-    height: 90%;
+    height: 85%;
 }
 .image {
     width: 100%;
@@ -79,14 +79,16 @@
     object-position: center;
 }
 .imgText{
-    height: 10%;
+    height: 15%;
     width: 100%;
-    color: black;
+    color: #500b0b;
+    font-weight: 600;
     padding: 1%;
     overflow-y: auto;
-    background-color: #c5b9b9;
+    background-color: #faf6f6;
+    text-align: center;
     p {
-        font-size: 18px;
+        font-size: 20px;
         font-style: italic;
     }
 }
