--- a/client/src/pages/styles/index.module.scss
+++ b/client/src/pages/styles/index.module.scss
@@ -98,7 +98,7 @@
     
 }
 .formCol{
-    background: #fff6f6;
+    
     padding: 0px;
 }
 .imgColumn{
@@ -175,5 +175,27 @@
         padding: 10px;
         text-align: center;
         width: 100%;
+    }
+}
+
+// SearchUsers.js page
+
+.searchRoot {
+    padding: 5rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+.sortOptions{
+    width: 100%;
+    padding: 10px;
+    background: #f1f1f1;
+    min-height: 30em;
+
+    h2 {
+        width: 100%;
+        text-align: center;
+        font-weight: 100;
     }
 }
