Finished the sorting page on the back end and the front end. Changed UX and design.

--- a/client/src/components/styles/UI/index.module.scss
+++ b/client/src/components/styles/UI/index.module.scss
@@ -2,7 +2,7 @@
 .userImgRow{
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: flex-start;
    
 }
