--- a/client/src/components/styles/core/compIndex.module.scss
+++ b/client/src/components/styles/core/compIndex.module.scss
@@ -190,21 +190,27 @@ header[role="banner"] {
 }
 
 //Image
-
+.caption{
+    opacity: 1;
+    min-height: 22px;
+    font-size: 20px;
+    font-weight: 500;
+    color: white;
+    background: rgba(0, 0, 0, 0.5);
+    padding: 0.1rem;
+    width: 100%;
+    z-index: 20000;
+    position: absolute;
+    margin-bottom: 80%;
+}
 .imageCard {
     width: 28%;
-    height: 23rem;
+    height: 20rem;
     margin: 0.5rem;
     background:#fff6f6 !important;
     border: 1px solid transparent !important;
     p {
-        opacity: 1;
-        min-height: 22px;
-        font-size:20px;
-        font-weight: 700;
-        color: #460c0c;
-        
-        width: 100%;
+        display: none;
     }
     button {
         display:none;
@@ -212,14 +218,37 @@ header[role="banner"] {
 }
 
 .imageCard:hover{
-    border:1px dotted silver !important;
     button {
         display:block;
     }
+
+    p {
+        display: block;
+    }
 }
+@media (max-width: 768px) {
+  .imageCard {
+      width: 33%;
+      margin: 0.3rem;
+      height: 20rem;
+  }
+  .cardImg {
+      height: 55%;
+  }
+}
+@media (max-width: 480px) {
+    .imageCard {
+        width: 45%;
+        margin: 0.3rem;
+        height: 20rem
+    }
+    .cardImg {
+        height: 50%;
+    }
+  }
 .cardImg{
     width: 100%;
-    height: 60%;
+    height: 65%;
     object-fit: cover;
 }
 .iconBtn{
@@ -270,7 +299,7 @@ header[role="banner"] {
 //userListRow.js
 .userElement{
     width: 100%; 
-    height: 10rem;
+    height: 12rem;
     padding: 15px 30px;
     background: white;
     display: flex;
@@ -312,6 +341,49 @@ header[role="banner"] {
         font-size: 18px;
         color: silver;
         font-style: italic;
+    }
+}
+@media (max-width: 992px) {
+    .userElement {
+        padding: 5px 8px;
+        height: 15rem;
+        margin-top: 1rem;
+        box-shadow: 1px 1px 1px 2px silver;
+
+    }
+  }
+  @media (max-width: 762px) {
+    .userElement {
+        padding: 5px 8px;
+        height: 30rem;
+        flex-direction: column;
+        justify-content: space-evenly;
+        margin-top: 1rem;
+        box-shadow: 1px 1px 1px 2px silver;
+
+    }
+    .userElAvatar{
+        width: 100%;
+        height: 55%;
+    }
+    .userElTxt{
+        margin-top: 0.3rem;
+        h1 {
+            font-size: 24px;
+            span {
+                font-size: 16px;
+            }
+        }
+    }
+  }
+  @media (max-width: 480px) {
+    .userElement {
+        padding: 2px;
+        height: 22rem;
+    }
+    .userElAvatar{
+        width: 100%;
+        height: 45%;
     }
 }
 
