--- a/client/src/pages/styles/index.module.scss
+++ b/client/src/pages/styles/index.module.scss
@@ -1,3 +1,8 @@
+//General
+.invalid {
+    color: darkcyan
+}
+
 //Auth
 .authContainer{
     
@@ -120,11 +125,24 @@
     background: #fff6f6;
     min-height: 40rem;
 }
+.uploadModal{
+    position: absolute;
+    top: 40px;
+    left: 40px;
+    right: 40px;
+    bottom: 40px;
+    background-color: darkred;
+}
+@media (max-width: 768px) {
+  .uploadModal {
+    width: 100%;
+    height: 20em;
+  }
+}
 
 .uploadSection{
    width: 100%;
    max-height: 39em;
-   z-index: 100;
    position: relative;
    background: white;
 }
@@ -195,7 +213,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    border-left: 1px double darkslategray;
+    border-top: 3px double darkslategray;
 
     h2 {
         width: 100%;
