--- a/client/src/components/styles/core/compIndex.module.scss
+++ b/client/src/components/styles/core/compIndex.module.scss
@@ -1,14 +1,32 @@
 //Template
+
+  
 .main {
     background: #fff6f6;
+    width: 100% !important;
+    padding: 0 !important;
    }
 header[role="banner"] {
   width: 100%;
+  padding: 0px 10px;
    background-color:  rgba(163, 36, 36, 0.5);
     #logoMain {
       display: block;
       margin: 0px auto;
     }
+    .logout{
+        display: block;
+        margin: 0px auto;
+        font-size: 20px;
+        color: white;
+        cursor: pointer;
+        color: darkcyan;
+        float:right;
+      }
+      .logout:hover {
+          opacity: 0.8;
+          border-bottom: 1px solid darkcyan;
+      }
 }
 .footer {
     width: 100%;
@@ -20,10 +38,14 @@ header[role="banner"] {
 .invitationContainer{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: flex-start;
     align-items: center;
     min-height: 12rem;
+    background: rgba(255, 255, 255, 0.5);
+    box-shadow: 5px 10px 10px 15px rgba(255, 255, 255, 0.5);
 }
+
 .invitationImgBox{
     display: flex;
     flex-direction: column;
@@ -48,48 +70,41 @@ header[role="banner"] {
     object-fit: cover;
 }
 
-.invitationBtnBox{
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-}
-.invitationAccept{
-    height: 1.5rem;
-    width: 50%;
-    background-color: snow;
-    color: rgb(109, 182, 127);
-    text-align: center;
-    cursor: pointer;
-}
-.invitationAccept:hover{
-    opacity: 0.8;
-}
-
-.invitationDecline{
-    height: 1.5rem;
-    width: 50%;
-    background-color: snow;
-    color: rgb(243, 76, 76);
-    text-align: center;
-    cursor: pointer;
-}
-.invitationDecline:hover{
-    opacity: 0.8;
+.placeholderBox{
+    h1{
+        font-size: 38px;
+    }
 }
 .placeholderIcon{
     width: 7rem;
     height: 7rem;
-    margin-right: 2rem;
+    
 }
+@media (max-width: 700px) {
+    .placeholderIcon {
+        width: 2.8rem;
+        height: 2.8rem;
+        margin-right: 0.5rem;
+    }
+    .placeholderBox{
+        justify-content: center;
+        h1{
+            font-size: 22px;
+        }
+    }
+  }
 
 // connectionList
 
 .connectBox{
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    min-height: 15rem;
+    min-height: 12rem;
+    background: rgba(255, 255, 255, 0.5);
+    box-shadow: 5px 10px 10px 15px rgba(255, 255, 255, 0.5);
 }
 .connectAvatar{
     width: 10rem; 
@@ -103,6 +118,18 @@ header[role="banner"] {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 5px 10px;
+    
+
+    p {
+        font-weight: 100;
+        color: darkred;
+        letter-spacing: 1.5px;
+    }
+}
+.connectImgDiv:hover{
+    opacity: 0.8;
+    cursor: pointer;
 }
 
 // Chat display list
@@ -127,7 +154,14 @@ header[role="banner"] {
     height: 7rem;
     width: 7rem;
     object-fit: cover;
+    cursor: pointer;
+    border-radius: 1rem;
+    overflow: hidden;
+    box-shadow: 0px 0px 5x 3px silver;
    
+}
+.chatDisplayImg:hover{
+    opacity: 0.8
 }
 .chatBox {
     overflow-y: auto;
@@ -136,16 +170,55 @@ header[role="banner"] {
     background-color: #f1f1f1;
 }
 .userAmsg{
-    font-size: 24px;
-    color: #14146d;
     width: 100%;
-    text-align: left;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    margin-top: 0.5rem;
+
+    p{
+        padding: 5px 15px;
+        border-radius: 20px;
+        color: white;
+        font-size: 20px;
+        background-color: #329299d0;
+        max-width: 75%;
+        min-width: 15%;
+        margin: 5px;
+    }
+    h6 {
+        font-size: 10px;
+        color: grey; 
+        font-weight: 100;
+        margin: 0px 5px;
+    }
 }
 .userBmsg{
-    font-size: 24px;
-    color: #a00000;
+    margin-top: 0.5rem;
+    background: transparent;
     width: 100%;
-    text-align: right;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-start;
+
+    p{
+        font-size: 20px;
+        background-color: #c02525da;
+        padding: 5px 15px;
+        border-radius: 20px;
+        color: #f1f1f1;
+        max-width: 75%;
+        min-width: 15%;
+        margin: 5px;
+    }
+    h6 {
+        font-size: 10px;
+        color: grey; 
+        font-weight: 100;
+        margin: 0px 5px;
+    }
 }
 .chatUserImages{
     width: 100%;
@@ -192,21 +265,21 @@ header[role="banner"] {
 //Image
 .caption{
     opacity: 1;
-    min-height: 22px;
-    font-size: 20px;
-    font-weight: 500;
+    height: 30px;
+    font-size: 15px;
+    font-weight: 300;
     color: white;
     background: rgba(0, 0, 0, 0.5);
     padding: 0.1rem;
     width: 100%;
-    z-index: 20000;
+    z-index: 200;
     position: absolute;
-    margin-bottom: 80%;
+    margin-top: 60%;
 }
 .imageCard {
-    width: 28%;
+    width: 17rem;
     height: 20rem;
-    margin: 0.5rem;
+    margin: 0.2rem;
     background:#fff6f6 !important;
     border: 1px solid transparent !important;
     p {
@@ -226,24 +299,31 @@ header[role="banner"] {
         display: block;
     }
 }
-@media (max-width: 768px) {
+@media (max-width: 880px) {
   .imageCard {
-      width: 33%;
-      margin: 0.3rem;
-      height: 20rem;
+      width: 15rem;
+      margin: 0.1rem;
+      height: 18rem;
+      justify-self: center;
   }
   .cardImg {
       height: 55%;
   }
+  .caption {
+      margin-top: 65%;
+  }
 }
 @media (max-width: 480px) {
     .imageCard {
-        width: 45%;
-        margin: 0.3rem;
-        height: 20rem
+        width: 100%;
+        margin: 0.1rem;
+        height: 25rem;
     }
     .cardImg {
         height: 50%;
+    }
+    .caption {
+        margin-top:0.1rem;
     }
   }
 .cardImg{
