--- a/client/src/pages/styles/index.module.scss
+++ b/client/src/pages/styles/index.module.scss
@@ -144,11 +144,45 @@
     background: #fff6f6;
     min-height: 40rem;
 }
-@media (max-width: 960px) {
+.avatarDiv{
+    width: 150px;
+    height: 150px;
+    margin-left: 10px;
+    box-shadow: 1px 1px 2px 2px rgba(245, 245, 245, 0.5);
+    border-radius: 5px;
+    section {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: flex-end;
+        width: 100%;
+        height: 100%;
+        background: rgba(0,0,0,0.15)
+    }
+    p {
+        padding: 0;
+        margin:0px 5px;
+        color: linen;
+    }
+    
+
+}
+@media(min-width: 983px) and (max-width: 1490px) {
   .images {
-      justify-content: center;
+    display: flex;
+    flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
   }
 }
+@media(max-width: 580px) {
+    .images {
+      display: flex;
+      flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    }
+  }
 .uploadModal{
     position: absolute;
     top: 40px;
@@ -336,7 +370,7 @@
     padding: 1rem 1rem;
     margin-bottom: 2rem;
     margin-top: 3rem;
-    
+    background: white;
   
 }
 .inviteListBox {
@@ -349,4 +383,89 @@
     padding: 1rem 1rem;
     margin-bottom: 2rem;
     margin-top: 3rem;
+}
+.conrow{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-end;
+    height: 100%;
+   
+}
+.manageBtn{
+    cursor: pointer;
+    margin: 1rem 2rem;
+    padding: 5px 5px;
+    background: rgb(219, 217, 217);
+    align-self: flex-start;
+    border-radius: 7px;
+    box-shadow: 0px 2px 1px 3px lightgray;
+    border: 1px solid transparent;
+    img {
+        width: 40px;
+        height: 40px;
+    }
+}
+.manageBtn:hover{
+    opacity: 0.8;
+   background: rgba(163, 36, 36, 0.2) ;
+   box-shadow: 0px 1px 1px 1px lightgray;
+   border: none;
+   border: 1px solid transparent;
+
+}
+.connectModalX{
+    color: darkslategray !important;
+}
+.connectModalX:hover{
+    background-color: rgb(202, 202, 202) !important;
+    opacity: 0.8;
+}
+.managedConnections{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: flex-start;
+    padding: 10px 15px;
+    width: 95%;
+    background: whitesmoke;
+    margin: 20px 0px;
+    
+
+    section {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        
+        img {
+            width:80px;
+            height: 80px;
+            object-fit: cover;
+            object-position: center;
+            border: 1px solid transparent;
+            border-radius: 50%;
+            box-shadow: 1px 3px 3px 2px slategrey;
+        }
+
+        p {
+            margin: 0px;
+            padding: 0px;
+            color: slategray;
+
+            span {
+                color: darkred;
+                font-size: 14px;
+            }
+        }
+        button:hover {
+            background: rgb(221, 246, 255);
+        }
+    }
+}
+.removeBtn{
+    color: rgb(255, 38, 0) !important;
+    margin: 10px 5px;
+}
+.removeBtn:hover{
+    background-color: rgba(250, 171, 157, 0.3) !important;
 }
